--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -428,6 +428,7 @@
     <string name="jumma">জুমআ</string>
 
     <string name="ser">ক্রমিক</string>
+    <string name="monthly_income_expence">মাসিক আয়-ব্যায়ের হিসাব</string>
     <string name="various_income">বিভিন্ন খাতে আয়</string>
     <string name="various_expence">বিভিন্ন খাতে ব্যায়</string>
     <string name="total_taka">টাকার পরিমাণ</string>
