--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -420,12 +420,14 @@
 
 
     <string name="prayer_time_title">নামাজের সময়সূচি</string>
+    <string name="change_prayer_time_title">নামাজের সময় পরিবর্তন করুন</string>
     <string name="fajr">ফজর</string>
     <string name="dhuhr">যোহর</string>
     <string name="asr">আসর</string>
     <string name="maghrib">মাগরিব</string>
     <string name="isha">এশা</string>
     <string name="jumma">জুমআ</string>
+
 
     <string name="ser">ক্রমিক</string>
     <string name="monthly_income_expence">মাসিক আয়-ব্যায়ের হিসাব</string>
