--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="interstitial_ad_unit_id">ca-app-pub-6626454304064681~3443502670</string>
     <string name="facebook_app_id">132793190888303</string>
     <string name="fb_login_protocol_scheme">fb132793190888303</string>
-    <string name="app_name">মকবুল শাহী জামে মসজিদ</string>
+    <string name="app_name">জামে মসজিদ</string>
     <string name="package_name">pnpmsjm.com. ourmasjid</string>
     <string name="package_name1">pnpmsjm.com.bd</string>
     <string name="app_id">ca-app-pub-6626454304064681~1735190404</string>
