--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -449,7 +449,7 @@
     <string name="misc_expence">অন্যান্য খরচ</string>
     <string name="cash_in_hand">হাতে জমা (আয় - ব্যায়)</string>
     <string name="dev_fund_income">উন্নয়ন খাতে আয়</string>
-    <string name="kollan_fund_income">কল্যাণ ফান্ডে আয়</string>
+    <string name="kollan_fund_income">কল্যাণ খাতে আয়</string>
     <string name="current_balance">বর্তমান স্থিতি</string>
 
 
